tests/snapshots/cli__search_print_no_match_exits_nonzero.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - 01ARZ3NDEKTSV4RRFFQ69G5FAV
    - "--print"
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
No notes matched your search criteria.
