tests/snapshots/cli__search_print_non_interactive_prints_paths_one_per_line.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
    - "--print"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................]-newer.md
[VAULT]/all-notes/[ULID....................]-older.md

----- stderr -----
