tests/snapshots/cli__search_warns_about_an_unfilled_empty_note.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
warning: skipped `[ULID....................]-quarterly-review.md`: the note has no frontmatter block
No notes matched your search criteria.
