tests/snapshots/cli__strict_makes_malformed_fatal.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - search
    - "-n"
    - "--strict"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----
[ULID]	[DATE]	Good		[VAULT]/all-notes/[ULID]-good.md

----- stderr -----
warning: skipped `[ULID]-bad.md`: the frontmatter has no `title` field
