tests/snapshots/cli__tags_lists_counts.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - tags
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
TAG	COUNT
area/work	2
programming/rust	1

----- stderr -----
