tests/snapshots/cli__today_again.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - today
    - "-p"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................]-[DATE....].md

----- stderr -----
