tests/snapshots/cli__today_first.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - today
    - "--no-edit"
  env:
    EDITOR: "true"
---
success: true
exit_code: 0
----- stdout -----
[VAULT]/all-notes/[ULID....................]-[DATE....].md

----- stderr -----
