tests/snapshots/cli__today_without_template_errors.snap
---
source: tests/cli.rs
info:
  program: ntropy
  args:
    - today
    - "--print"
  env:
    EDITOR: "true"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: while preparing today's note: no template `today` in [VAULT]/.ntropy/templates
